# python-modules

./: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py  ft_harvest_total.py  ft_plant_age.py  ft_seed_inventory.py  ft_water_reminder.py
m1/: ft_garden_analytics.py  ft_garden_data.py  ft_garden_intro.py  ft_garden_security.py  ft_plant_factory.py  ft_plant_growth.py  ft_plant_types.py
m1/ex0/: ft_garden_intro.py
m1/ex1/: ft_garden_data.py
m1/ex2/: .ft_plant_growth.py.swp  ft_plant_growth.py
m1/ex3/: ft_plant_factory.py
m1/ex4/: ft_garden_security.py
m1/ex5/: ft_plant_types.py
m1/ex6/: ft_garden_analytics.py
m10/ex0/: lambda_spells.py
m10/ex1/: higher_magic.py
m10/ex2/: scope_mysteries.py
m10/ex3/: functools_artifacts.py
m10/ex4/: decorator_mastery.py
m2/: ft_custom_errors.py  ft_different_errors.py  ft_finally_block.py  ft_first_exception.py  ft_raise_exception.py
m2/ex0/: ft_first_exception.py
m2/ex1/: ft_raise_exception.py
m2/ex2/: ft_different_errors.py
m2/ex3/: ft_custom_errors.py
m2/ex4/: ft_finally_block.py
m3/ex0/: ft_command_quest.py
m3/ex1/: ft_score_analytics.py
m3/ex2/: ft_coordinate_system.py
m3/ex3/: ft_achievement_tracker.py
m3/ex5/: ft_data_stream.py
m6/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
m7/: .tournament.py.swp  battle.py  capacitor.py  tournament.py
m8/ex1/: loading.py  pyproject.toml
(+36 files in other folders)
